--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.3.0",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -21,7 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "css:watch": "npx tailwindcss --input ./src/tailwind.css --output ./src/index.css --watch"
+    "css:watch": "npx tailwindcss --input ./src/tailwind.css --output ./src/index.css --watch",
+    "css:build": "npx tailwindcss --input ./src/tailwind.css --output ./src/index.css"
   },
   "eslintConfig": {
     "extends": [
